--- a/internal/templates/layout.html
+++ b/internal/templates/layout.html
@@ -7,9 +7,9 @@
         <meta name="author" content="" />
         <title>MOSQ Center</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="templates/app/assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="app/assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="templates/app/css/styles.css" rel="stylesheet" />
+        <link href="app/css/styles.css" rel="stylesheet" />
     </head>
     <body>
         <div class="d-flex" id="wrapper">
@@ -55,6 +55,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="templates/app/js/scripts.js"></script>
+        <script src="app/js/scripts.js"></script>
     </body>
 </html>
