MOSQ-012: implement payments template

--- a/internal/templates/app/pagesat.html
+++ b/internal/templates/app/pagesat.html
@@ -1,29 +1,31 @@
 {{ define "content" }}
 <div class="container">
-    <h1>Lagjet</h1>
-    <p class="lead">Lista e lagjeve</p>
+    <h1>Pagesat</h1>
+    <p class="lead">Lista e pagesave</p>
     <table class="table">
         <thead>
             <tr>
+                <th>Emri i familjes</th>
+                <th>Anetaret</th>
+                <th>Shuma e pageses</th>
+                <th>Viti</th>
                 <th>Emri i lagjes</th>
-                <th>Qyteti</th>
-                <th>Shteti</th>
-                <th>Kodi Postal</th>
                 <th>Krijuar me</th>
                 <th>Ndryshuar me</th>
                 <th>Ndrysho</th>
             </tr>
         </thead>
         <tbody>
-            {{range .Neighbourhoods}}
+            {{range .Payments}}
             <tr>
-                <td>{{.Name}}</td>
-                <td>{{.Region}}</td>
-                <td>{{.Country}}</td>
-                <td>{{.PostalCode}}</td>
+                <td>{{.FamilyName}}</td>
+                <td>{{.Members}}</td>
+                <td>{{.Amount}}</td>
+                <td>{{.Year}}</td>
+                <td>{{.NeighbourhoodName}}</td>
                 <td>{{.CreatedAt}}</td>
                 <td>{{.UpdatedAt}}</td>
-                <td><a href="/neighbourhoods/{{.ID}}/edit">Ndrysho</a></td>
+                <td><a href="/pagesat/{{.ID}}/ndrysho">Ndrysho</a></td>
             </tr>
             {{end}}
         </tbody>
