--- a/internal/templates/layout.html
+++ b/internal/templates/layout.html
@@ -56,5 +56,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="app/js/scripts.js"></script>
+        <script src="app/js/krijoLagje.js"></script>
     </body>
 </html>
