--- a/internal/templates/app/lagjet.html
+++ b/internal/templates/app/lagjet.html
@@ -16,7 +16,9 @@
                 <input id="postal_code" name="postal_code" type="text" placeholder="Kodi Postal" class="form-control" />
             </div>
             <div class="col">
-                <input type="submit" value="Krijo" class="btn btn-primary" />
+                <button type="submit" class="btn btn-primary">
+                    <i class="fas fa-floppy-disk"></i> Ruaj
+                </button>
             </div>
         </div>
     </form>
@@ -34,6 +36,7 @@
                 <th>Krijuar me</th>
                 <th>Ndryshuar me</th>
                 <th>Ndrysho</th>
+                <th>Fshi</th>
             </tr>
         </thead>
         <tbody>
@@ -45,7 +48,8 @@
                 <td>{{.PostalCode}}</td>
                 <td>{{.CreatedAt}}</td>
                 <td>{{.UpdatedAt}}</td>
-                <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" onclick="updateModal('{{.ID}}', '{{.Name}}', '{{.Region}}', '{{.Country}}', '{{.PostalCode}}')">Ndrysho</button></td>
+                <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" onclick="updateModal('{{.ID}}', '{{.Name}}', '{{.Region}}', '{{.Country}}', '{{.PostalCode}}')"><i class="fa-solid fa-pen-to-square"></i></button></td>
+                <td><button type="button" class="btn btn-danger" onclick="deleteNeighbourhood('{{.ID}}')"><i class="fa-solid fa-trash"></i></button></td>
             </tr>
             {{end}}
         </tbody>
@@ -79,12 +83,12 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Mbyll</button>
-                    <button type="submit" form="update-form" class="btn btn-primary">Ruaj Ndryshimet</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="fa-solid fa-right-from-bracket"></i></button>
+                    <button type="submit" form="update-form" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<script src="app/js/krijoLagje.js"></script>
+<script src="app/js/lagje.js"></script>
 {{ end }}
