--- a/internal/templates/app/pagesat.html
+++ b/internal/templates/app/pagesat.html
@@ -18,7 +18,9 @@
                 <input id="year" name="year" type="number" placeholder="Viti" class="form-control" />
             </div>
             <div class="col">
-                <input type="submit" value="Krijo" class="btn btn-primary" />
+                <button type="submit" class="btn btn-primary">
+                    <i class="fas fa-floppy-disk"></i> Ruaj
+                </button>
             </div>
         </div>
     </form>
@@ -49,7 +51,7 @@
                 <td>{{.NeighbourhoodName}}</td>
                 <td>{{.CreatedAt}}</td>
                 <td>{{.UpdatedAt}}</td>
-                <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" onclick="updateModal('{{.ID}}', '{{.FamilyID}}', '{{.Amount}}', '{{.Year}}')">Ndrysho</button></td>
+                <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" onclick="updateModal('{{.ID}}', '{{.FamilyID}}', '{{.Amount}}', '{{.Year}}')"><i class="fa-solid fa-pen-to-square"></i></button></td>
             </tr>
             {{end}}
         </tbody>
@@ -83,12 +85,12 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Mbyll</button>
-                    <button type="submit" form="update-form" class="btn btn-primary">Ruaj Ndryshimet</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="fa-solid fa-right-from-bracket"></i></button>
+                    <button type="submit" form="update-form" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<script src="app/js/krijoPagese.js"></script>
+<script src="app/js/pagese.js"></script>
 {{ end }}
