--- a/internal/templates/layout.html
+++ b/internal/templates/layout.html
@@ -10,6 +10,7 @@
         <link rel="icon" type="image/x-icon" href="app/assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="app/css/styles.css" rel="stylesheet" />
+        <script src="https://kit.fontawesome.com/eaa912ce1f.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="d-flex" id="wrapper">
