--- a/internal/templates/app/pagesat.html
+++ b/internal/templates/app/pagesat.html
@@ -7,15 +7,18 @@
                 <select id="family_id" name="family_id" class="form-control">
                     <option value="" disabled selected>Zgjidh familjen</option>
                     {{range .Families}}
-                    <option value="{{.ID}}">{{.Name}} {{.Middlename}} {{.Surname}}</option>
+                    <option value="{{.ID}}" data-members="{{.Members}}">{{.Name}} {{.Middlename}} {{.Surname}}</option>
                     {{end}}
                 </select>
+                <label for="family_id" class="form-label">Familja</label>
             </div>
             <div class="col">
                 <input id="amount" name="amount" type="number" step=".01" placeholder='Shuma per pagese' class="form-control" />
+                <label for="amount" class="form-label">Shuma</label>
             </div>
             <div class="col">
                 <input id="year" name="year" type="number" placeholder="Viti" class="form-control" />
+                <label for="year" class="form-label">Viti</label>
             </div>
             <div class="col">
                 <button type="submit" class="btn btn-primary">
@@ -39,6 +42,7 @@
                 <th>Krijuar me</th>
                 <th>Ndryshuar me</th>
                 <th>Ndrysho</th>
+                <th>Fshi</th>
             </tr>
         </thead>
         <tbody>
@@ -52,6 +56,7 @@
                 <td>{{.CreatedAt}}</td>
                 <td>{{.UpdatedAt}}</td>
                 <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" onclick="updateModal('{{.ID}}', '{{.FamilyID}}', '{{.Amount}}', '{{.Year}}')"><i class="fa-solid fa-pen-to-square"></i></button></td>
+                <td><button type="button" class="btn btn-danger" onclick="deletePayment('{{.ID}}')"><i class="fa-solid fa-trash"></i></button></td>
             </tr>
             {{end}}
         </tbody>
