MOSQ-018: implement UI for no payment

--- a/internal/templates/layout.html
+++ b/internal/templates/layout.html
@@ -21,6 +21,7 @@
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/lagjet">Lagjet</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/familjet">Familjet</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/pagesat">Pagesat</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/pagesat-pakryera">Pagesat e pakryera</a>
                 </div>
             </div>
             <!-- Page content wrapper-->
