--- a/internal/templates/app/familjet.html
+++ b/internal/templates/app/familjet.html
@@ -2,20 +2,20 @@
 <div class="container">
     <h1>Krijo Familje</h1>
     <form id="family-form" method="POST" action="/api/v1/families">
-        <div class="row">
-            <div class="col">
+        <div class="row g-3">
+            <div class="md-3">
                 <input id="name" name="name" type="text" placeholder='Emri' class="form-control" />
             </div>
-            <div class="col">
+            <div class="md-3">
                 <input id="middle_name" name="middle_name" type="text" placeholder="Emri i Prindit" class="form-control" />
             </div>
-            <div class="col">
+            <div class="md-3">
                 <input id="surname" name="surname" type="text" placeholder="Mbiemri" class="form-control" />
             </div>
-            <div class="col">
+            <div class="md-3">
                 <input id="members" name="members" type="number" placeholder="Numri i anetareve" class="form-control" />
             </div>
-            <div class="col">
+            <div class="md-3">
                 <select id="neighbourhood_id" name="neighbourhood_id" class="form-control">
                     <option value="" disabled selected>Zgjidh lagjen</option>
                     {{range .Neighbourhoods}}
@@ -23,7 +23,7 @@
                     {{end}}
                 </select>
             </div>
-            <div class="col">
+            <div class="md-3">
                 <button type="submit" class="btn btn-primary">
                     <i class="fas fa-floppy-disk"></i> Ruaj
                 </button>
@@ -34,7 +34,7 @@
 </div>
 <div class="container">
     <h3>Lista e familjeve</h3>
-    <table class="table">
+    <table class="table" style="overflow-x: auto; display: block;">
         <thead>
             <tr>
                 <th>Emri</th>
